--- a/Local.html
+++ b/Local.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
 
     
 
@@ -497,7 +497,7 @@
     </div>
 </section>
 
-<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="418" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="4990" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-wowslider">
         <div class="ws_images">
             <ul>
