--- a/training.html
+++ b/training.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
