create github pages

--- a/CV01.html
+++ b/CV01.html
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5hv3vDWEDLJb8zWkk4VEh5dmzTnJ+j5qcUtewfE47mp6IG/kyD9KzzfaENTuaKZeLuM/DH2BolbaRc6kPlL5LK5bloBIL6dN4M5NPV3SDc6KTwJUZlA8eH/RULiSlgbt.sgKUav8jDFgVG2tvBD0SMGzxEc+wgo01i6kt3POFPX7PcMfGYH0cPC+z+xmHfQewwKQnih0yulvjsHdNvlX97MLYHLJVF4lXqdduAerbs6Yq0vkZvaoYi9z39oJytB/Q">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QS9ashvMuMzQ+DHXNrgFxoRd7zjQdfb5MV4+veMv5+75XCeQEvzPBmlEi3pPmqODs8l+W6Y2QXOftU3I/VsZtDe+6Cs0cEeXBbSpEA6OXKsU8O7sFvVQIrT3pLq1aIG3.RemLJAk2DVrRr3fNahMXiJkhYcHh+FYj4crajQoNAn3iiA2mVt9RMUFzzw4S0XoB/6H6K7SqVr+wJVlxu8NBaCCNVUrirU+/+WLolrt4SRLup1a0yLB+HYCequv6pUaz">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
