--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -96,7 +96,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="p9lQiVJW9e4wZYVK+RrirxHDtjeZuw7w0q0DW/QGecuDdzQyeiWW12jlN6cwhL0iIoxnojjCUXIV4FPx95qx5FQtzSgzh0R5DcS+AuGLpyXTMluYqb3g+FIeLFLErQQk.F71EVSxY9Gko9IwI54jgDp231Honz1BIePJLO63/voghhqs089DY3ECmEKrN9p1kSwiygWXaTYczMM9WdS6dXLHJE6vGzDYzjuv8T2lwtjzcpf6bQkZdG56Hz+BNz1w/">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bgVJ1wiIpYL/YIv9rz8so4PIl/ddyRWzUzUn6qsv4/kkKzCC3IllXbd8jPVAXjHO9bIuc/Lg6Z9h70NHqZPERsg5ucFg19njipcimCqBuD8YD6SZfJsHGTNULdEf9CqI">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
