--- a/Education.html
+++ b/Education.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
