--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qGkIo/dLkauj//nqCAAKnmi5uQOM0TZIsE4ZO90XDhd4JjsROALv/ApPQ7w1ieWnI+iiYJsr3gwGYwpDpIvHptQbvfIJUp9MoDBBKsLcAipma8lTaLB+RrH/poCG7L2n.B+B8wqeKID0cTqmSydHD4460cUioZl6uHM4a7qw82BYCu6nAvDu3j7RVSgCrV1r+YEvvoWnMZ2dzYKbTrcDKYaJXhYN60r9CZczla4+DWva7jqs/tnH706Ai0EV8x5k3">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="huYJ0JJvnvmuCBxKvva+DYIH/2GUFQPYz8vzE5OdjkXAMw8zz29P4JkCDs4rYJcFBZFUscOCHYa3bztOq8Z1Q8ZicWWS0RA71l+gOC+PWBo/t/EC5fJvBDKBFrVcdli/.i4yN3cP4uKwchhP3Rq2DyLUmq4etuAGAqfRsOgoJM82a6ZW0z6AZd2HZBenU9CLq/3HL3M30tpEReP5gR9KEFba2yT34lUxAINI6GdOM/wHaST3h/MOwmr7DQ3zwG6d5">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
