--- a/studies.html
+++ b/studies.html
@@ -92,7 +92,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section once="footers" class="cid-rFLnXwGgdT" id="footer6-9f">
 
     
 
@@ -149,7 +149,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background148.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -166,7 +166,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background249.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -184,7 +184,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background350.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><a href="assets/files/201809SOCLMAR.pdf" target="_blank">Sadat Industrial City 2018</a></h4>
@@ -332,7 +332,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background147.jpg" alt="Mobirise">
+                        <img src="assets/images/background15.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market and HR</strong></h4>
@@ -348,7 +348,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background242.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies by sector</strong></h4>
@@ -364,7 +364,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background343.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Labour Market Studies</strong></h4>
