--- a/training.html
+++ b/training.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
@@ -366,7 +366,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ09qNnLhAWBQRo5N7CyE8paM" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
